<resources>
    <string name="app_title">The Executive</string>
    <string name="login">Log In</string>
    <string name="user_id">User ID</string>
    <string name="empty_user_name">Please provide User Name.</string>
    <string name="empty_user_mobile">Please provide Mobile Number.</string>
    <string name="provide_valid_email">Email address is required in valid format.</string>
    <string name="privacy_policy_error">Please accept Privacy Policy.</string>
    <string name="terms_condition_error">Please accept Terms and Conditions.</string>
    <string name="empty_email">Email Address is required.</string>
    <string name="empty_full_name">Please provide Full Name.</string>
    <string name="empty_user_id">Please provide NRIC /FIN /Passport.</string>
    <string name="empty_password">Password is required.</string>
    <string name="empty_current_password">Current Password is required.</string>
    <string name="empty_confirm_password">Confirm Password is required.</string>
    <string name="empty_new_password">New Password is required.</string>
    <string name="mobile_error">Mobile Number is required.</string>
    <string name="order_number_error">Order Number is required.</string>
    <string name="bank_number_error">Bank Name is required.</string>
    <string name="holder_account_number_error">Holder account number is required.</string>
    <string name="transfer_amount_error">Transfer account is required.</string>
    <string name="transfer_date_error">Transfer date is required.</string>
    <string name="dob_error">Date of birth is required.</string>
    <string name="city_error">Please provide city.</string>
    <string name="state_error">Please provide state</string>
    <string name="first_name_error">First Name is required.</string>
    <string name="last_name_error">Last Name is required.</string>
    <string name="empty_description">Please provide Description.</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="signup">Signup</string>
    <string name="create_new_account">Create New Account.</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="blood_group">Blood Group</string>
    <string name="gender">Gender</string>
    <string name="mobile">Mobile</string>
    <string name="email_id">Email Id</string>
    <string name="edit">Edit</string>
    <string name="toolbar_left_icon">Toolbar left icon</string>
    <string name="toolbar_right_icon">Toolbar right icon</string>
    <string name="title_login">Login</string>
    <string name="error_invalid_email">Invalid mail id.</string>
    <string name="title_register">Register</string>
    <string name="something_went_wrong_error">Something went wrong, Please try again.</string>
    <string name="exit">Exit</string>
    <string name="maintenance_msg">Application is under maintenance</string>
    <string name="force_update_msg">A new version of the The Executive App is available. Please update to access the latest features.</string>
    <string name="soft_update_msg">A new version of the The Executive App is available. Please update to access the latest features.</string>
    <string name="please_enter_your_email_address_below">Please enter your Email address below.</string>
    <string name="password_info">* You will receive a link to reset your password</string>
    <string name="submit">Submit</string>
    <string name="subscribe_btn">Subscribe</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="wishlist">Wishlist</string>
    <string name="search">Search</string>
    <string name="my_orders">My Orders</string>
    <string name="category_image">Parent category image.</string>
    <string name="facebook_app_id">174246843202937</string>
    <string name="fb_login_protocol_scheme">fb174246843202937</string>
    <string name="email_address">Email Address</string>
    <string name="login_with">Login with</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="gmail_login">Login with Gmail</string>
    <string name="create_account">Create an Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="postcode">Zip/ Postal Code</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="subscribe">Suscribe to get IDR %1$s Voucher</string>
    <string name="term_and_condition">By creating an account, you agree to the applicable Terms &amp; Condition</string>
    <string name="dob_hint">DD/MM/YYYY</string>
    <string name="street_address_1">Street Address Line 1 </string>
    <string name="street_address_error">Street Address Line 1 is required.</string>
    <string name="street_address_2">Street Address Line 2 </string>
    <string name="postal_error">Zip/ Postal code is required.</string>
    <string name="valid_password_error">Password must contain 8 or more characters, at least 1 alphabet and 1 number.</string>
    <string name="valid_mobile_error">Length should be between 8 to 16.</string>
    <string name="valid_postal_error">Length should be 5.</string>
    <string name="confirm_password_error">The password does not match, kindly enter the same password as above.</string>
    <string name="same_password_error">It seems the password same as before, kindly enter new password.</string>
    <string name="select_lang_title">Select Language</string>
    <string name="select_option">Select Option</string>
    <string name="continue_btn">Continue</string>
    <string name="language_hint">Language</string>
    <string name="my_account_option_icon">My account option icon</string>
    <string name="my_account_title">My Account</string>
    <string name="news_letter_option">Subscribe to Newsletter</string>
    <string name="my_information_option">My Information</string>
    <string name="subscribe_info">Subscribe to our newsletter to stay updated on the latest promotions, new arrivals and online exclusives.</string>
    <string name="new_letter_title">NewsLetter</string>
    <string name="sort_by">Sort by</string>
    <string name="filter_by">Filter by</string>
    <string name="product_list">Product List</string>
    <string name="product_image">Product Image</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="promotion_image">Image for promotion</string>
    <string name="network_error">Network Error</string>
    <string name="select_gender_label">Select Gender</string>
    <string name="no_state_available_error">No state available for this country</string>
    <string name="no_cities_available_error">No cities available</string>
    <string name="empty_country_error">Country is required.</string>
    <string name="empty_city_error">City is required.</string>
    <string name="empty_state_error">State is required.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>
    <string name="existing_user_label">Existing Customer</string>
    <string name="new_user_label">New Customer</string>
    <string name="chat">Chat</string>
    <string name="close_app_text">Are you sure you want to close application?</string>
    <string name="network_err_text">No Internet Connection</string>
    <string name="verify_email_message">Welcome aboard, you are now a member of The Executive. Kindly Verify your email.</string>
    <string name="register_successfull">Welcome aboard, you are now a member of The Executive.</string>
    <string name="logout_success_message">Logout successfully</string>
    <string name="non_breakable_apace">\u00A0</string>
    <string name="price_range_label">Price Range</string>
    <string name="apply_filters">apply</string>
    <string name="filter_dialog_title">FILTER</string>
    <string name="sort_dialog_title">SORT BY</string>
    <string name="clear">Clear</string>
    <string name="image_one_detail">Product first image showing at top</string>
    <string name="image_two_detail">Product second image is showing</string>
    <string name="composition">Composition and Care</string>
    <string name="size_guideline">Size Guideline</string>
    <string name="shipping">Shipping</string>
    <string name="returns">Returns</string>
    <string name="share">Share</string>
    <string name="buying_guideline">Buying Guideline</string>
    <string name="buying_guide">Buying Guide</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="might_like">You Might Also Like</string>
    <string name="add_to_bag">Add to Bag</string>
    <string name="select_size">Select Size</string>
    <string name="size_guide">Size Guide</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="email_sent">We have sent you an email, please follow the instruction to reset password</string>
    <string name="password_change_msg">Your password successfully changed</string>
    <string name="logout_text">Are you sure you want to logout from application?</string>
    <string name="no_product_available_error_search">No results found for the search</string>
    <string name="no_product_available_error">We couldn\'t find what you need.</string>
    <string name="empty_shipping_method_error">Seems there is no shipping available for selected address. Please change address</string>
    <string name="empty_payment_method_error">Seems there is no payment available</string>
    <string name="empty_sort_option_selection_error">Please select at least one option</string>
    <string name="empty_filter_option_selection_error">Please select at least one option</string>
    <string name="enter_search_error">Please enter search keyword</string>
    <string name="login_required_error">We couldn\'t connect to your wishlist, Kindly login/Register to the app</string>
    <string name="loading_data">Loading…</string>
    <string name="add_to_cart_success_msg">Product added to bag</string>
    <string name="available_colors">Color</string>
    <string name="wishlist_success_msg">added to wishlist</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="common_error">Something went wrong, Please try again</string>
    <string name="select_size_err">Please select size</string>
    <string name="no_more_products">No more product available</string>
    <string name="country">Country</string>
    <string name="save">save</string>
    <string name="address_book">Address Book</string>
    <string name="set_as_default">Set as Default</string>
    <string name="mobile_number_label">Mobile Number : </string>
    <string name="remove">Remove</string>
    <string name="add_addresse">Add Address</string>
    <string name="wishlist_items_count">Total %1$d item(s) in your wishlist</string>
    <string name="bag_icon">Bag Icon</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="remove_item_text">Are you sure you want to remove item from your wishlist?</string>
    <string name="remove_item_text_bag">Are you sure you want to remove item from your Shopping bag?</string>
    <string name="no_item">No items available</string>
    <string name="no_item_selected">No items selected.</string>
    <string name="total">Total </string>
    <string name="promo_code">Promo Code</string>
    <string name="enter_your_promo_code">Enter your Promo Code</string>
    <string name="btn_apply">APPLY</string>
    <string name="checkout">checkout</string>
</resources>