<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_above="@+id/rl_add_to_box"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:id="@+id/img_one"
                    android:layout_width="match_parent"
                    android:layout_height="450dp"
                    android:src="@drawable/one"
                    android:layout_margin="@dimen/twenty_dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/image_one_detail"
                    />

                <ImageView
                    android:id="@+id/img_two"
                    android:layout_height="450dp"
                    android:layout_marginRight="@dimen/twenty_dp"
                    android:layout_marginLeft="@dimen/twenty_dp"
                    android:layout_width="match_parent"
                    android:layout_below="@id/img_one"
                    android:src="@drawable/one"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/image_two_detail"
                    />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_below="@id/img_two"
                    android:layout_marginTop="@dimen/fifty_dp"
                    android:textAlignment="center"
                    android:maxLines="10"
                    android:textStyle="bold"
                    android:text="Polo Shirt, Shirt coller,Short sleeve, Slim Fit Materail: Tetoron,Rayon Model Height : 186 CM Model wearing size M,Color: Grey"
                    />

                <TextView
                    android:id="@+id/tv_colors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="Available colors"
                    android:layout_below="@id/tv_description"
                    />

                <LinearLayout
                    android:id="@+id/ll_color_choice"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_below="@id/tv_colors"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:orientation="horizontal"
                    />

                <ImageView
                    android:id="@+id/img_random"
                    android:layout_width="match_parent"
                    android:layout_height="450dp"
                    android:layout_marginTop="@dimen/twenty_dp"
                    android:layout_marginRight="@dimen/twenty_dp"
                    android:layout_marginLeft="@dimen/twenty_dp"
                    android:layout_below="@id/ll_color_choice"
                    android:scaleType="centerCrop"
                    android:src="@drawable/one"
                    />

                <TextView
                    android:id="@+id/tv_composition_and_care"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_random"
                    android:layout_marginTop="@dimen/twenty_dp"
                    android:textStyle="bold"
                    android:text="@string/composition"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/tv_size_guideline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_composition_and_care"
                    android:text="@string/size_guideline"
                    android:layout_marginTop="@dimen/twenty_dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/tv_shipping"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_size_guideline"
                    android:layout_marginTop="@dimen/twenty_dp"
                    android:text="@string/shipping"
                    android:textStyle="bold"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/tv_return"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_shipping"
                    android:layout_marginTop="@dimen/twenty_dp"
                    android:text="@string/returns"
                    android:textStyle="bold"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/tv_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_return"
                    android:layout_marginTop="@dimen/twenty_dp"
                    android:text="@string/share"
                    android:textStyle="bold"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/tv_buying_guidelinie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_share"
                    android:layout_marginTop="@dimen/twenty_dp"
                    android:text="@string/buying_guideline"
                    android:textStyle="bold"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/tv_chat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_buying_guidelinie"
                    android:layout_marginTop="@dimen/twenty_dp"
                    android:text="@string/chat"
                    android:textStyle="bold"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/tv_wishlist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_chat"
                    android:layout_marginTop="@dimen/twenty_dp"
                    android:text="@string/add_to_wishlist"
                    android:textStyle="bold"
                    android:gravity="center"
                    />

                <View
                    android:id="@+id/view_line"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/one_dp"
                    android:background="@color/theme_black_color"
                    android:layout_below="@id/tv_wishlist"
                    android:layout_marginTop="@dimen/twenty_dp"
                    />
                <TextView
                    android:id="@+id/tv_like"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/might_like"
                    android:gravity="center"
                    android:textSize="@dimen/twenty_dp"
                    android:layout_marginTop="@dimen/twenty_dp"
                    android:layout_below="@id/view_line"
                    />

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="@dimen/twenty_dp"
                    android:layout_below="@id/view_line"
                    />

            </RelativeLayout>

        </ScrollView>

        <RelativeLayout
            android:id="@+id/rl_add_to_box"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            >

            <Button
                android:id="@+id/btn_add_to_bag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_bag"
                android:layout_marginTop="@dimen/twenty_dp"
                android:layout_marginLeft="@dimen/twenty_dp"
                android:padding="@dimen/ten_dp"
                android:background="@drawable/button_border"
                />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/twenty_dp"
                android:text="IDR  179,900"
                />

        </RelativeLayout>




    </RelativeLayout>



</layout>