<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="shoppingViewModel"
            type="com.ranosys.theexecutive.modules.shoppingBag.ShoppingBagViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/thirty_dp">


        <android.support.constraint.Guideline
            android:id="@+id/guideline_right_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/five_dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_left_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/five_dp" />

        <View
            android:id="@+id/view1"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="@dimen/one_dp"
            android:layout_marginTop="@dimen/five_dp"
            android:background="@color/divider_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/label_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/total"
            android:textSize="@dimen/sixteen_sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline_left_1"
            app:layout_constraintTop_toBottomOf="@+id/view1" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sixteen_sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline_right_1"
            app:layout_constraintTop_toTopOf="@+id/label_total" />


        <TextView
            android:id="@+id/tv_promo_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:text="@string/promo_code"
            android:textSize="@dimen/sixteen_sp"
            app:layout_constraintStart_toStartOf="@id/guideline_left_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_total" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_promo_code"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:hint="@string/enter_your_promo_code"
            app:layout_constraintEnd_toStartOf="@id/btn_apply"
            app:layout_constraintStart_toStartOf="@id/tv_promo_code"
            app:layout_constraintTop_toBottomOf="@+id/tv_promo_code" />


        <Button
            android:id="@+id/btn_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ghost_btn_bg"
            android:text="@string/btn_apply"
            app:layout_constraintEnd_toEndOf="@id/guideline_right_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_promo_code" />


        <Button
            android:id="@+id/btn_checkout"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:background="@color/btn_checkout_bg"
            android:text="@string/checkout"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/guideline_right_1"
            app:layout_constraintStart_toStartOf="@id/guideline_left_1"
            app:layout_constraintTop_toBottomOf="@+id/btn_apply" />

    </android.support.constraint.ConstraintLayout>

</layout>