<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="userInfo"
            type="com.ranosys.theexecutive.fragments.Profile.ProfileViewModel" />
    </data>

    <RelativeLayout
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/four_dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_profile_pic"
                    android:layout_width="@dimen/one_two_eight"
                    android:layout_height="@dimen/one_two_eight"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/placeholder" />

                <EditText
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_profile_pic"
                    android:layout_centerHorizontal="true"
                    android:padding="@dimen/four_dp"
                    android:enabled="false"
                    android:text="@={userInfo.name}" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/usermail_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_user_name">

                    <EditText
                        android:id="@+id/et_usermail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_id"
                        android:enabled="false"
                        android:text="@={userInfo.emailId}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/mobile_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/usermail_layout">

                    <EditText
                        android:id="@+id/et_usermobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile"
                        android:enabled="false"
                        android:text="@={userInfo.mobile}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/gender_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mobile_layout">

                    <EditText
                        android:id="@+id/et_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/gender"
                        android:enabled="false"
                        android:text="@={userInfo.gender}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/blood_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gender_layout">

                    <EditText
                        android:id="@+id/et_bloodgroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/blood_group"
                        android:enabled="false"
                        android:text="@={userInfo.blood}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/city_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/blood_layout">

                    <EditText
                        android:id="@+id/et_usercity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city"
                        android:enabled="false"
                        android:text="@={userInfo.city}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/state_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/city_layout">

                    <EditText
                        android:id="@+id/et_userstate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/state"
                        android:enabled="false"
                        android:text="@={userInfo.state}" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</layout>
