<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="newsLetterVM"
            type="com.delamibrands.theexecutive.modules.newsLetter.NewsLetterViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_main_layout"
        android:paddingTop="@dimen/sixteen_dp"
        android:paddingBottom="@dimen/sixteen_dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:background="@color/white">

        <android.support.constraint.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/twenty_four_dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/twenty_four_dp" />


        <TextView
            android:id="@+id/tv_subscribe_info"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:text="@string/subscribe_info"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_eight_dp"
            android:hint="@string/email_address"
            android:theme="@style/tilTheme"
            app:errorText="@{newsLetterVM.emailError}"
            android:labelFor="@+id/et_email"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/tv_subscribe_info">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/field_start_padding"
                android:onTextChanged="@{() -> newsLetterVM.onEmailTextChanged()}"
                android:text="@={newsLetterVM.email}"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_subscribe"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:text="@string/subscribe_btn"
            android:theme="@style/button_theme"
            android:background="@drawable/black_button_bg"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintBottom_toBottomOf="parent" />
    </android.support.constraint.ConstraintLayout>
</layout>
